--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,22 @@
            </ul>
             </div>
         </header>
-        
+        <main>
+            <div class="thomas">
+                <!--Her er det bare å leke seg med JS-->
+            </div>
+            <div class="container">
+                <div class="obj1">
+                    <p>test1</p>
+                </div>
+                <div class="obj2">
+                    <p>test2</p>
+                </div>
+                <div class="obj3">
+                    <p>test3</p>
+                </div>
+            </div>
+        </main>
         <script src="" async defer></script>
     </body>
 </html>
