--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <title>Booker</title>
         <meta name="description" content="Booker is a website where u can find books that are free to use and lays on different cafe’s marked on a map.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../CSS/myCSS.css">
+        <link rel="stylesheet" href="myCSS.css">
     </head>
     <body>
         <header>
