--- a/Index.html
+++ b/Index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Booker</title>
-        <meta name="description" content="Booker is a website where u can find books that are free to use and lays on different cafe’s marked on a map.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="myCSS.css">
-    </head>
-    <body>
-        <header>
-            <div>
-                <!-- logo her-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Booker</title>
+    <meta name="description" content="Booker is a website where u can find books that are free to use and lays on different cafe’s marked on a map.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="myCSS.css">
+</head>
+<body>
+    <div class="background">
+        <div class="logo">Booker</div>
+
+    </div>
+    <header>
+        <div>
+            <!-- logo her-->
+        </div>
+        <div>
+            <ul class="meny">
+                <li><a href="#">Hjem</a></li>
+                <li><a href="#">Kart</a></li>
+                <li><a href="#">Om Oss</a></li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <div class="thomas">
+            <!--Her er det bare å leke seg med JS-->
+        </div>
+        <div class="container">
+            <div class="obj1">
+                <p>test1</p>
             </div>
-            <div>
-           <ul class="meny">
-               <li><a href="#">Hjem</a></li>
-               <li><a href="#">Kart</a></li>
-               <li><a href="#">Om Oss</a></li>
-           </ul>
+            <div class="obj2">
+                <p>test2</p>
             </div>
-        </header>
-        <main>
-            <div class="thomas">
-                <!--Her er det bare å leke seg med JS-->
+            <div class="obj3">
+                <p>test3</p>
             </div>
-            <div class="container">
-                <div class="obj1">
-                    <p>test1</p>
-                </div>
-                <div class="obj2">
-                    <p>test2</p>
-                </div>
-                <div class="obj3">
-                    <p>test3</p>
-                </div>
-            </div>
-        </main>
-        <script src="" async defer></script>
-    </body>
+        </div>
+    </main>
+    <script src="" async defer></script>
+</body>
 </html>
