push av merg mellom thomas og ke

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="background">
         <div class="logo">Booker</div>
-
+        
     </div>
     <header>
         <div>
@@ -24,21 +24,37 @@
             </ul>
         </div>
     </header>
-    <main>
-        <div class="thomas">
-            <!--Her er det bare å leke seg med JS-->
-        </div>
+    <main>        
         <div class="container">
             <div class="obj1">
-                <p>test1</p>
+                <h3>
+                    Noen ting på bullets
+                </h3>
+                <ul>
+                    <li>Ting1</li>
+                    <li>Ting2</li>
+                    <li>Ting3</li>
+                    <li>Ting4</li>
+                    <li>Ting5</li>
+                </ul>
             </div>
             <div class="obj2">
-                <p>test2</p>
+                <img src="" alt="Demo mapsfunction" class="maps">
             </div>
             <div class="obj3">
-                <p>test3</p>
+                <h3>Tester</h3>
+                <p>test3 her er det tekst srgøkjslkgl jgjg jrjg
+                    jrgjrjg ijrelgjjrelgjerjglrel erj religler
+                    gieri i iji</p>
+                </div>
             </div>
-        </div>
+            <div class="text">
+                <p>slgjdfbjdfkjvkjbvdfv ghdfjhgsøDVSDVSDØS
+                    fgdfgødfgjdfjgjkfdg fghf djkg hdfa gadj gad</p>
+                </div>
+            </main>
+            <script src="" async defer></script>
+        </body>
     </main>
     <script src="" async defer></script>
 </body>
