--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             <div class="obj2">
-                <img src="" alt="Demo mapsfunction" class="maps">
+                <img src="/img/Oslo1.PNG" alt="Demo mapsfunction" class="maps">
             </div>
             <div class="obj3">
                 <h3>Tester</h3>
