updt wireframe endret navn på bildelogo

--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,7 @@
         </div>
         <div>
             <ul class="meny">
+                    <li><a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="#">Hjem</a></li>
                 <li><a href="#">Kart</a></li>
                 <li><a href="#">Om Oss</a></li>
@@ -28,7 +29,7 @@
         <div class="container">
             <div class="obj1">
                 <h3>
-                    Noen ting på bullets
+                    Nærmeste bøker
                 </h3>
                 <ul>
                     <li>Ting1</li>
@@ -42,15 +43,30 @@
                 <img src="img/Oslo1.PNG" alt="Demo mapsfunction" class="maps">
             </div>
             <div class="obj3">
-                <h3>Tester</h3>
-                <p>test3 her er det tekst srgøkjslkgl jgjg jrjg
-                    jrgjrjg ijrelgjjrelgjerjglrel erj religler
-                    gieri i iji</p>
+                <h3>(valgt bok) INFERNO av Dan Brown</h3>
+                <p>text om boken hentet fra en bok-database</p>
+                <p>rghrghrgølrgrhghearghergherh hgrehgerh    gfjhgkjerhgkhrekghergh
+                         erjkgherkjghkjergkherkgh      eøjghjeørghøerjhgergkherghre
+                         hggh rjhgrekjhg ergkjhrhrhgjrehgrh   rejkhgkjrehgkjre</p>
                 </div>
             </div>
             <div class="text">
-                <p>slgjdfbjdfkjvkjbvdfv ghdfjhgsøDVSDVSDØS
-                    fgdfgødfgjdfjgjkfdg fghf djkg hdfa gadj gad</p>
+                <h3>Booker: </h3>
+                <p>
+                    En enkel chip man kan klistre på innsiden av permen på bøker, som
+                     lokaliserer boken. Når man er ferdig å lese en bok, kan man legge
+                      den fra seg på en cafe eller et annet offentlig sted å merke boken
+                       som ledig. 
+                    Slik kan man gjennom en app finne forskjellige bøker rundt omkring i byen.
+                    </p>
+                </br>
+                    <h3>Kom i gang:</h3>
+                    <p>
+                        For å komme i gang må du kjøpe 3 eller flere chipper og aktevere de 
+                        ved å feste de på en bok.
+                        Når det er registrert 3 bøker på deg kan du benytte deg av nettsiden
+                         og appen.</p>
+                         <p>Kjøp chip <a href="#">her.</a> </p>
                 </div>
             </main>
             <script src="" async defer></script>
