--- a/Index.html
+++ b/Index.html
@@ -69,6 +69,31 @@
                          <p>Kjøp chip <a href="#">her.</a> </p>
                 </div>
             </main>
+            <footer>
+                <div class="fotHead">
+                    <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
+                    <h3>Booker</h3>
+                </div>
+                <div class="container1">
+                    <div class="fot1">
+                            <p>her har vi en catchfrase</p>
+                            <p>gjenta den korte teksten om produktet</p>
+                    </div>
+                    <div class="fot2">
+                        <p>Her står noe om våres visjon</p>
+                        <p>"Vi ønsker at bøker skal kunne plukkes opp på hver eneste cafe!"</p>
+                    </div>
+                    <div class="fot3">
+                        <p><a href="#">Kontakt oss</a></p>
+                        <p><a href="#">FaceBook</a></p>
+                        <p><a href="#">Twitter</a></p>
+                        <p><a href="#">IG</a></p>
+                    </div>
+                </div>
+                <div class="fotfot">
+                <p>text som skal i footeren &copy;2019</p>
+            </div>
+            </footer>
             <script src="" async defer></script>
         </body>
     </main>
