--- a/Index.html
+++ b/Index.html
@@ -14,11 +14,8 @@
     </div>
     <header>
         <div>
-            <!-- logo her-->
-        </div>
-        <div>
             <ul class="meny">
-                    <li><a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
+                <li><a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="#">Hjem</a></li>
                 <li><a href="#">Kart</a></li>
                 <li><a href="#">Om Oss</a></li>
@@ -71,13 +68,19 @@
             </main>
             <footer>
                 <div class="fotHead">
-                    <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
-                    <h3>Booker</h3>
                 </div>
                 <div class="container1">
                     <div class="fot1">
-                            <p>her har vi en catchfrase</p>
-                            <p>gjenta den korte teksten om produktet</p>
+                        <div class="fot11">
+                                <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
+                        </div>
+                        <div class="fot12">
+                                <h3>Booker</h3>
+                                <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase 
+                                    her har vi en catchfrase her har vi en catchfrase her har vi en 
+                                    catchfrase her har vi en catchfrase her har vi en catchfrase her har vi 
+                                    en catchfraseher har vi en catchfrase</p>
+                        </div>
                     </div>
                     <div class="fot2">
                         <p>Her står noe om våres visjon</p>
@@ -85,13 +88,13 @@
                     </div>
                     <div class="fot3">
                         <p><a href="#">Kontakt oss</a></p>
-                        <p><a href="#">FaceBook</a></p>
-                        <p><a href="#">Twitter</a></p>
-                        <p><a href="#">IG</a></p>
+                        <p><a href="#">ICON FaceBook</a></p>
+                        <p><a href="#">ICON Twitter</a></p>
+                        <p><a href="#">ICON IG</a></p>
                     </div>
                 </div>
                 <div class="fotfot">
-                <p>text som skal i footeren &copy;2019</p>
+                <p class="center">Text som skal i footeren &copy;2019</p>
             </div>
             </footer>
             <script src="" async defer></script>
