--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
         <div class="logo">Booker</div>
         
     </div>
-    <header>
+    <header id="myHeader">
         <div>
             <ul class="meny">
                 <li><a href="Index.html"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
@@ -22,7 +22,7 @@
             </ul>
         </div>
     </header>
-    <main>        
+    <main class="content">        
         <div class="container">
             <div class="obj1">
                 <h3>
@@ -100,6 +100,6 @@
             <script src="" async defer></script>
         </body>
     </main>
-    <script src="" async defer></script>
+    <script src="scripts.js" async defer></script>
 </body>
 </html>
