Lagt til Kjop, minimale endringer.

--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,10 @@
     <header id="myHeader">
         <div>
             <ul class="meny">
-                <li><a href="Index.html"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
+                <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
+                <li><a href="kjop.html">Kjøp</a></li>
                 <li><a href="#">Om Oss</a></li>
             </ul>
         </div>
