--- a/kart.html
+++ b/kart.html
@@ -10,7 +10,7 @@
 <body>
     <div class="background">
         <div class="logo">Booker</div>
-        
+
     </div>
     <header>
         <div>
@@ -18,10 +18,10 @@
                 <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
-                <li><a href="#">Om Oss</a></li>
+                <li><a href="omoss.html">Om Oss</a></li>
             </ul>
         </div>
-    </header>       
+    </header>
         <div class="container">
             <div class="obj1">
                 <h3>
@@ -56,9 +56,9 @@
                         </div>
                         <div class="fot12">
                                 <h3>Booker</h3>
-                                <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase 
-                                    her har vi en catchfrase her har vi en catchfrase her har vi en 
-                                    catchfrase her har vi en catchfrase her har vi en catchfrase her har vi 
+                                <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase
+                                    her har vi en catchfrase her har vi en catchfrase her har vi en
+                                    catchfrase her har vi en catchfrase her har vi en catchfrase her har vi
                                     en catchfraseher har vi en catchfrase</p>
                         </div>
                     </div>
