--- a/kjop.html
+++ b/kjop.html
@@ -10,7 +10,7 @@
 <body>
     <div class="background">
         <div class="logo">Booker</div>
-        
+
     </div>
     <header>
         <div>
@@ -19,12 +19,12 @@
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
-                <li><a href="#">Om Oss</a></li>
+                <li><a href="omoss.html">Om Oss</a></li>
             </ul>
         </div>
-    </header>       
+    </header>
     <main>
-        
+
     </main>
     <footer>
             <div class="fotHead">
@@ -36,9 +36,9 @@
                     </div>
                     <div class="fot12">
                          <h3>Booker</h3>
-                        <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase 
-                            her har vi en catchfrase her har vi en catchfrase her har vi en 
-                            catchfrase her har vi en catchfrase her har vi en catchfrase her har vi 
+                        <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase
+                            her har vi en catchfrase her har vi en catchfrase her har vi en
+                            catchfrase her har vi en catchfrase her har vi en catchfrase her har vi
                             en catchfraseher har vi en catchfrase
                         </p>
                     </div>
