--- a/kart.html
+++ b/kart.html
@@ -12,16 +12,17 @@
         <div class="logo">Booker</div>
         
     </div>
-    <header>
+    <header id="header">
         <div>
             <ul class="meny">
                 <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
+                <li><a href="kjop.html">Kjøp</a></li>
                 <li><a href="#">Om Oss</a></li>
             </ul>
         </div>
-    </header>       
+    </header class="content">       
         <div class="container">
             <div class="obj1">
                 <h3>
@@ -77,9 +78,8 @@
                 <p class="center">Text som skal i footeren &copy;2019</p>
             </div>
             </footer>
-            <script src="" async defer></script>
+            <script src="scripts.js" async defer></script>
         </body>
     </main>
-    <script src="" async defer></script>
 </body>
 </html>
