--- a/kjop.html
+++ b/kjop.html
@@ -12,7 +12,7 @@
         <div class="logo">Booker</div>
         
     </div>
-    <header>
+    <header id="header">
         <div>
             <ul class="meny">
                 <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
@@ -58,8 +58,7 @@
                 <p class="center">Text som skal i footeren &copy;2019</p>
             </div>
         </footer>
-        <script src="" async defer></script>
+        <script src="scripts.js" async defer></script>
     </body>
-    <script src="" async defer></script>
 </body>
 </html>
