--- a/kjop.html
+++ b/kjop.html
@@ -24,7 +24,17 @@
         </div>
     </header>
     <main>
-
+        <div class="container1">
+            <div class="kjopes">
+                <h3>3-pack sporer</h3>
+            </div>
+            <div class="kjopes">
+                <h3>5-pack sporer</h3>
+            </div>
+            <div class="kjopes">
+                <h3>10-pack sporer</h3>
+            </div>
+        </div>
     </main>
     <footer>
             <div class="fotHead">
