--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
-                <li><a href="#">Om Oss</a></li>
+                <li><a href="omoss.html">Om Oss</a></li>
             </ul>
         </div>
     </header>
