--- a/omoss.html
+++ b/omoss.html
@@ -12,18 +12,18 @@
         <div class="logo">Booker</div>
 
     </div>
-    <header>
+    <header id="header">
         <div>
             <ul class="meny">
                 <li><a href="Index.html"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
-                <li><a href="omss.html">Om Oss</a></li>
+                <li><a href="omoss.html">Om Oss</a></li>
             </ul>
         </div>
     </header>
-    <main>
+    <main class="content">
         <div class="container">
             <div class="obj-historie">
                 <h1>
@@ -88,9 +88,8 @@
                 <p class="center">Text som skal i footeren &copy;2019</p>
             </div>
             </footer>
-            <script src="" async defer></script>
+            <script src="scripts.js" async defer></script>
         </body>
     </main>
-    <script src="" async defer></script>
 </body>
 </html>
