--- a/kart.html
+++ b/kart.html
@@ -22,8 +22,8 @@
                 <li><a href="omoss.html">Om Oss</a></li>
             </ul>
         </div>
-    </header class="content">       
-        <div class="container">
+    </header>       
+        <div class="container content">
             <div class="obj1">
                 <h3>
                     Nærmeste bøker
