--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="background">
         <div class="logo">Booker</div>
-
+        <p class="logo--text">Read | Share | Coffe</p>
+        <button class="logo--button"> <a href="#les">Les mer</a></button>
     </div>
     <header id="header">
         <div>
@@ -23,7 +24,7 @@
             </ul>
         </div>
     </header>
-    <main class="content">        
+    <main class="content" id="les">        
         <div class="container">
             <div class="obj1">
                 <h3>
