--- a/Index.html
+++ b/Index.html
@@ -25,30 +25,7 @@
         </div>
     </header>
     <main class="content" id="les">        
-        <div class="container">
-            <div class="obj1">
-                <h3>
-                    Nærmeste bøker
-                </h3>
-                <ul>
-                    <li>Kniven - Cafe Ric's</li>
-                    <li>Ringenes herre - Cafe Baristo (Avstand 50m)</li>
-                    <li>Harry potter - Cafe SenseLess (Avstand 150m)</li>
-                    <li>Bienes historie - Wired Coffe (Avstand 200m)</li>
-                    <li>Think fast and slow - Starbucks (Avstand 250m)</li>
-                </ul>
-            </div>
-            <div class="obj2">
-                <img src="img/Oslo1.PNG" alt="Demo mapsfunction" class="maps">
-            </div>
-            <div class="obj3">
-                <h3>(valgt bok) INFERNO av Dan Brown</h3>
-                <p>text om boken hentet fra en bok-database</p>
-                <p>rghrghrgølrgrhghearghergherh hgrehgerh    gfjhgkjerhgkhrekghergh
-                         erjkgherkjghkjergkherkgh      eøjghjeørghøerjhgergkherghre
-                         hggh rjhgrekjhg ergkjhrhrhgjrehgrh   rejkhgkjrehgkjre</p>
-                </div>
-            </div>
+        <div class="container1">
             <div class="text">
                 <h3>Booker: </h3>
                 <p>
@@ -66,8 +43,12 @@
                         Når det er registrert 3 bøker på deg kan du benytte deg av nettsiden
                          og appen.</p>
                          <p>Kjøp chip <a href="#">her.</a> </p>
-                </div>
-            </main>
+            </div>
+            <div class="bilde">
+                <img src="img/Oslo1.PNG" alt="Demo mapsfunction" class="maps">
+            </div>
+        </div>
+    </main>
             <footer>
                 <div class="fotHead">
                 </div>
