--- a/kart.html
+++ b/kart.html
@@ -10,7 +10,8 @@
 <body>
     <div class="background">
         <div class="logo">Booker</div>
-
+        <p class="logo--text">Read | Share | Coffe</p>
+        <button class="logo--button"> <a href="#les">Les mer</a></button>
     </div>
     <header id="header">
         <div>
