--- a/kjop.html
+++ b/kjop.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
-    <div class="background">
+    <!--<div class="background">
         <div class="logo">Booker</div>
         <p class="logo--text">Read | Share | Coffe</p>
         <button class="logo--button"> <a href="#les">Les mer</a></button>
-    </div>
+    </div> -->
     <header id="header">
         <div>
             <ul class="meny">
@@ -25,7 +25,7 @@
         </div>
     </header>
     <main>
-        <div class="container1">
+        <div class="container1" id="les">
             <div class="kjopes">
                 <h3>3-pack sporer</h3>
             </div>
