--- a/kart.html
+++ b/kart.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
-    <div class="background">
+    <!--<div class="background">
         <div class="logo">Booker</div>
         <p class="logo--text">Read | Share | Coffe</p>
         <button class="logo--button"> <a href="#les">Les mer</a></button>
-    </div>
+    </div>-->
     <header id="header">
         <div>
             <ul class="meny">
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </header>       
-        <div class="container content">
+        <div class="container content" id="les">
             <div class="obj1">
                 <h3>
                     Nærmeste bøker
