--- a/omoss.html
+++ b/omoss.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
-    <div class="background">
+    <!--<div class="background">
         <div class="logo">Booker</div>
         <p class="logo--text">Read | Share | Coffe</p>
         <button class="logo--button"> <a href="#les">Les mer</a></button>
-    </div>
+    </div> -->
     <header id="header">
         <div>
             <ul class="meny">
@@ -26,7 +26,7 @@
     </header>
     <main class="content">
         <div class="container">
-            <div class="obj-historie">
+            <div class="obj-historie" id="les">
                 <h1>
                     Vår historie
                 </h1>
