--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div class="background">
       <img src="img/books.svg" id="books" alt="">  
       <div class="logo">Booker</div>
-      <p class="logo--text">Read | Share | Coffe</p>
+      <p class="logo--text">Read | Share | Coffee</p>
       <!-- <button class="logo--button"></button><a href="#les">Les mer</a></button> -->
       <a class="logo--button" href="#les">Les mer</a>
         
@@ -22,7 +22,7 @@
     <header id="header">
         <div>
             <ul class="meny">
-                <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
+                <li><a href="Index.html"><img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
@@ -55,44 +55,15 @@
             </div>
         </div>
     </main>
-            <footer>
-                <div class="fotHead">
-                </div>
-                <div class="container1">
-                    <div class="fot1">
-                        <div class="fot11">
-                                <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
-                        </div>
-                        <div class="fot12">
-                                <h3>Booker</h3>
-                                <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase
-                                    her har vi en catchfrase her har vi en catchfrase her har vi en
-                                    catchfrase her har vi en catchfrase her har vi en catchfrase her har vi
-                                    en catchfraseher har vi en catchfrase</p>
-                        </div>
-                    </div>
-                    <div class="fot2">
-                        <p>Her står noe om våres visjon</p>
-                        <p>"Vi ønsker at bøker skal kunne plukkes opp på hver eneste cafe!"</p>
-                    </div>
-                    <div class="fot3">
-                        <p><a href="#">Kontakt oss</a></p>
-                        <p><a href="#">ICON FaceBook</a></p>
-                        <p><a href="#">ICON Twitter</a></p>
-                        <p><a href="#">ICON IG</a></p>
-                    </div>
-                </div>
-                <div class="fotfot">
-                <p class="center">Text som skal i footeren &copy;2019</p>
-            </div>
-            </footer>
+        <footer>
+            <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo">        
+        </footer>
     </main>
     <script src="scripts.js" async defer></script>
 </body>
 </html>
+
 <!-- SOURCES -->
 <!-- IMAGES -->
 <!-- bakgrunn: https://www.pexels.com/photo/book-chapter-six-5834/ -->
-
-
 <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div> -->
