lagt til iconer i footer

--- a/Index.html
+++ b/Index.html
@@ -56,14 +56,28 @@
         </div>
     </main>
         <footer>
-            <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo">        
+            <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo fotItem">
+            <p class="fotItem">
+                "Let i byen,<br> 
+                finn boken,<br>
+                finn verden"
+            </p>
+            <div class="fotItem">
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-instagram"></i>
+            </div>        
         </footer>
     </main>
     <script src="scripts.js" async defer></script>
+    <script src="https://kit.fontawesome.com/fe9b56c1b3.js" crossorigin="anonymous"></script>
 </body>
 </html>
 
 <!-- SOURCES -->
 <!-- IMAGES -->
 <!-- bakgrunn: https://www.pexels.com/photo/book-chapter-six-5834/ -->
+
+<!-- Icons -->
 <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div> -->
+<!-- https://fontawesome.com/icons/facebook-square?style=brands -->
