--- a/kart.html
+++ b/kart.html
@@ -49,37 +49,20 @@
                 </div>
             </div>
             <footer>
-                <div class="fotHead">
-                </div>
-                <div class="container1">
-                    <div class="fot1">
-                        <div class="fot11">
-                                <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
-                        </div>
-                        <div class="fot12">
-                                <h3>Booker</h3>
-                                <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase
-                                    her har vi en catchfrase her har vi en catchfrase her har vi en
-                                    catchfrase her har vi en catchfrase her har vi en catchfrase her har vi
-                                    en catchfraseher har vi en catchfrase</p>
-                        </div>
-                    </div>
-                    <div class="fot2">
-                        <p>Her står noe om våres visjon</p>
-                        <p>"Vi ønsker at bøker skal kunne plukkes opp på hver eneste cafe!"</p>
-                    </div>
-                    <div class="fot3">
-                        <p><a href="#">Kontakt oss</a></p>
-                        <p><a href="#">ICON FaceBook</a></p>
-                        <p><a href="#">ICON Twitter</a></p>
-                        <p><a href="#">ICON IG</a></p>
-                    </div>
-                </div>
-                <div class="fotfot">
-                <p class="center">Text som skal i footeren &copy;2019</p>
-            </div>
+                <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo fotItem">
+                <p class="fotItem">
+                    "Let i byen,<br> 
+                    finn boken,<br>
+                    finn verden"
+                </p>
+                <div class="fotItem">
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>        
             </footer>
             <script src="scripts.js" async defer></script>
+            <script src="https://kit.fontawesome.com/fe9b56c1b3.js" crossorigin="anonymous"></script>
         </body>
     </main>
 </body>
