--- a/kart.html
+++ b/kart.html
@@ -5,6 +5,7 @@
     <title>Booker</title>
     <meta name="description" content="Booker is a website where u can find books that are free to use and lays on different cafe’s marked on a map.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
     <header id="header">
         <div>
             <ul class="meny">
-                <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
+                <li><a href="Index.html"><img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
@@ -24,6 +25,7 @@
             </ul>
         </div>
     </header>       
+        <h1 class="kartH1">Bøker nær deg</h1>
         <div class="container content" id="les">
             <div class="obj1">
                 <h3>
@@ -37,17 +39,17 @@
                     <li>Think fast and slow - Starbucks (Avstand 250m)</li>
                 </ul>
             </div>
-            <div class="obj2">
+            <div class="obj1">
                 <img src="img/Oslo1.PNG" alt="Demo mapsfunction" class="maps">
             </div>
-            <div class="obj3">
+            <div class="obj1">
                 <h3>(valgt bok) INFERNO av Dan Brown</h3>
                 <p>text om boken hentet fra en bok-database</p>
-                <p>rghrghrgølrgrhghearghergherh hgrehgerh    gfjhgkjerhgkhrekghergh
-                         erjkgherkjghkjergkherkgh      eøjghjeørghøerjhgergkherghre
-                         hggh rjhgrekjhg ergkjhrhrhgjrehgrh   rejkhgkjrehgkjre</p>
-                </div>
+                <p>Antall sider: 385</p>
+                <p>Utgivelsesår: 2015</p>
+                <p>Utgiver: Gyldendal</p>
             </div>
+         </div>
             <footer>
                 <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo fotItem">
                 <p class="fotItem">
@@ -56,10 +58,13 @@
                     finn verden"
                 </p>
                 <div class="fotItem">
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-twitter-square"></i>
-                    <i class="fab fa-instagram"></i>
-                </div>        
+                    <a href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+                    <a href="www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+                    <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="fotItem">
+                    <p>Booker™ © 2019</p>
+                </div>         
             </footer>
             <script src="scripts.js" async defer></script>
             <script src="https://kit.fontawesome.com/fe9b56c1b3.js" crossorigin="anonymous"></script>
@@ -67,3 +72,11 @@
     </main>
 </body>
 </html>
+
+<!-- 
+
+    
+ -->
+
+
+
