--- a/kjop.html
+++ b/kjop.html
@@ -5,71 +5,70 @@
     <title>Booker</title>
     <meta name="description" content="Booker is a website where u can find books that are free to use and lays on different cafe’s marked on a map.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
-    <!--<div class="background">
-        <div class="logo">Booker</div>
-        <p class="logo--text">Read | Share | Coffe</p>
-        <button class="logo--button"> <a href="#les">Les mer</a></button>
-    </div> -->
     <header id="header">
         <div>
             <ul class="meny">
-                <li><a href="Index.html"><img src="img/bokmapv2.png" alt="LOGO" class="smallLogo"></a></li>
+                <li><a href="Index.html"><img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
                 <li><a href="omoss.html">Om Oss</a></li>
             </ul>
         </div>
-    </header>
-    <main>
+    </header>       
+    <main class="content" id="les">
         <div class="container1" id="les">
             <div class="kjopes">
                 <h3>3-pack sporer</h3>
+                <h1>3 x</h1>
+                <i class="fas fa-microchip"></i>
+                <div class="leggIHandlekurv">Legg I Handlekurv</div> 
             </div>
             <div class="kjopes">
                 <h3>5-pack sporer</h3>
+                <h1>5 x</h1>
+                <i class="fas fa-microchip"></i>
+                <div class="leggIHandlekurv">Legg I Handlekurv</div> 
             </div>
             <div class="kjopes">
                 <h3>10-pack sporer</h3>
+                <h1>5 x</h1>
+                <i class="fas fa-microchip"></i>
+                <div class="leggIHandlekurv">Legg I Handlekurv</div>    
             </div>
         </div>
     </main>
     <footer>
-            <div class="fotHead">
-            </div>
-            <div class="container1">
-                <div class="fot1">
-                    <div class="fot11">
-                        <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
-                    </div>
-                    <div class="fot12">
-                         <h3>Booker</h3>
-                        <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase
-                            her har vi en catchfrase her har vi en catchfrase her har vi en
-                            catchfrase her har vi en catchfrase her har vi en catchfrase her har vi
-                            en catchfraseher har vi en catchfrase
-                        </p>
-                    </div>
-                </div>
-                    <div class="fot2">
-                        <p>Her står noe om våres visjon</p>
-                        <p>"Vi ønsker at bøker skal kunne plukkes opp på hver eneste cafe!"</p>
-                    </div>
-                    <div class="fot3">
-                        <p><a href="#">Kontakt oss</a></p>
-                        <p><a href="#">ICON FaceBook</a></p>
-                        <p><a href="#">ICON Twitter</a></p>
-                        <p><a href="#">ICON IG</a></p>
-                    </div>
-                </div>
-                <div class="fotfot">
-                <p class="center">Text som skal i footeren &copy;2019</p>
-            </div>
-        </footer>
-        <script src="scripts.js" async defer></script>
+        <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo fotItem">
+        <p class="fotItem">
+            "Let i byen,<br> 
+            finn boken,<br>
+            finn verden"
+        </p>
+        <div class="fotItem">
+            <a href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+            <a href="www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+            <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="fotItem">
+            <p>Booker™ © 2019</p>
+        </div>         
+    </footer>
+            <script src="scripts.js" async defer></script>
+            <script src="https://kit.fontawesome.com/fe9b56c1b3.js" crossorigin="anonymous"></script>
     </body>
+    </main>
 </body>
 </html>
+
+<!-- SOURCES -->
+<!-- IMAGES -->
+<!-- bakgrunn: https://www.pexels.com/photo/book-chapter-six-5834/ -->
+
+<!-- Icons -->
+<!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div> -->
+<!-- https://fontawesome.com/icons/facebook-square?style=brands -->
