--- a/omoss.html
+++ b/omoss.html
@@ -5,6 +5,7 @@
     <title>Booker</title>
     <meta name="description" content="Booker is a website where u can find books that are free to use and lays on different cafe’s marked on a map.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="myCSS.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
     <header id="header">
         <div>
             <ul class="meny">
-                <li><a href="Index.html"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a></li>
+                <li><a href="Index.html"><img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo"></a></li>
                 <li><a href="Index.html">Hjem</a></li>
                 <li><a href="kart.html">Kart</a></li>
                 <li><a href="kjop.html">Kjøp</a></li>
@@ -26,7 +27,7 @@
     </header>
     <main class="content">
         <div class="container">
-            <div class="obj-historie" id="les">
+            <div class="obj3" id="les">
                 <h1>
                     Vår historie
                 </h1>
@@ -43,53 +44,30 @@
                     Det er både dyrt og tungvint.<br>
                     Booker er fremtidens bokklubb der hvem som helst kan dele bøker, på en enkel og måte ved hjelp av et state of art-program utviklet over lang tid.<br>
                   </p>
-
-
-
-
             </div>
-
-            <div class="obj3">
-              <div class="andreas">
-              <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/15927_10207492212371874_3686159247461658163_n.jpg?_nc_cat=105&_nc_oc=AQmn6VEpGySV4Lp7v6wARXvYwX2Tc858BQwYxFZrngXubAdCJhqcRfdaTwDKE92wmIh7lR0ZyfrbOCaVF_fV1LIl&_nc_ht=scontent-arn2-1.xx&oh=a06eb83120c1b99a707ba2b308c46380&oe=5E3A846B">
-                </div>
-                <div class="img-tekst">
+            <div class="obj3 andreas">
+                  <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.0-9/15927_10207492212371874_3686159247461658163_n.jpg?_nc_cat=105&_nc_oc=AQmn6VEpGySV4Lp7v6wARXvYwX2Tc858BQwYxFZrngXubAdCJhqcRfdaTwDKE92wmIh7lR0ZyfrbOCaVF_fV1LIl&_nc_ht=scontent-arn2-1.xx&oh=a06eb83120c1b99a707ba2b308c46380&oe=5E3A846B">
                   <p> Andreas, the founding father</p>
-                  </div>
             </div>
             </main>
             <footer>
-                <div class="fotHead">
-                </div>
-                <div class="container1">
-                    <div class="fot1">
-                        <div class="fot11">
-                                <a href="#"><img src="img/bokmap.png" alt="LOGO" class="smallLogo"></a>
-                        </div>
-                        <div class="fot12">
-                                <h3>Booker</h3>
-                                <p>her har vi en catchfraseher har vi en catchfrase her har vi en catchfrase
-                                    her har vi en catchfrase her har vi en catchfrase her har vi en
-                                    catchfrase her har vi en catchfrase her har vi en catchfrase her har vi
-                                    en catchfraseher har vi en catchfrase</p>
-                        </div>
-                    </div>
-                    <div class="fot2">
-                        <p>Her står noe om våres visjon</p>
-                        <p>"Vi ønsker at bøker skal kunne plukkes opp på hver eneste cafe!"</p>
-                    </div>
-                    <div class="fot3">
-                        <p><a href="#">Kontakt oss</a></p>
-                        <p><a href="#">ICON FaceBook</a></p>
-                        <p><a href="#">ICON Twitter</a></p>
-                        <p><a href="#">ICON IG</a></p>
-                    </div>
-                </div>
-                <div class="fotfot">
-                <p class="center">Text som skal i footeren &copy;2019</p>
-            </div>
+                <img src="img/bokmapwhite.png" alt="LOGO" class="smallLogo fotItem">
+                <p class="fotItem">
+                    "Let i byen,<br> 
+                    finn boken,<br>
+                    finn verden"
+                </p>
+                <div class="fotItem">
+                    <a href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+                    <a href="www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+                    <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+                </div> 
+                <div class="fotItem">
+                    <p>Booker™ © 2019</p>
+                </div> 
             </footer>
             <script src="scripts.js" async defer></script>
+            <script src="https://kit.fontawesome.com/fe9b56c1b3.js" crossorigin="anonymous"></script>
         </body>
     </main>
 </body>
