--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +32,7 @@
         </div>
     </header>
     <main class="content" id="les">        
-        <div class="container1">
+        <div class="indexContainer">
             <div class="text">
                 <h3>Booker: </h3>
                 <p>
@@ -63,12 +64,14 @@
                 finn verden"
             </p>
             <div class="fotItem">
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-instagram"></i>
-            </div>        
+                <a href="www.facebook.com"><i class="fab fa-facebook-square"></i></a>
+                <a href="www.twitter.com"><i class="fab fa-twitter-square"></i></a>
+                <a href="www.instagram.com"><i class="fab fa-instagram"></i></a>
+            </div> 
+            <div class="fotItem">
+                <p>Booker™ © 2019</p>
+            </div>       
         </footer>
-    </main>
     <script src="scripts.js" async defer></script>
     <script src="https://kit.fontawesome.com/fe9b56c1b3.js" crossorigin="anonymous"></script>
 </body>
